# emit_rand

./: Cargo.toml  README.md
.github/workflows/: rand.yml
src/: lib.rs
