[package]
name = "emit_rand"
version = "0.9.0"
authors = ["emit contributors"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/emit-rs/emit_opentelemetry"
description = "rand-based Rng for emit."
keywords = ["logging", "tracing", "metrics", "observability"]
categories = ["development-tools::debugging"]
edition = "2021"

[dependencies.emit_core]
version = "1"
default-features = false

[dependencies.rand]
version = "0.9"

[dev-dependencies.emit]
version = "1"
default-features = false
features = ["std", "implicit_rt"]
